--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 
         </div>
 
-        <label for="numberOfPeople" class="main__inputSection__label3">Number of People</label>
-        <input type="number" id="numberOfPeople" class="main__inputSection__numberOfPeopleInput" placeholder="">
+        <div class="main__inputSection__wrapper">
+            <label for="numberOfPeople" class="main__inputSection__wrapper__label3">Number of People</label> 
+            <span class="main__inputSection__wrapper__alert">Can't be zero</span>
+        </div>
+        <input type="number" id="numberOfPeople" class="main__inputSection__wrapper__numberOfPeopleInput" placeholder="">
         </form>
 
         <section class="outputSection">
