--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <main class="main">
 
         <form class="main__inputSection">
-         <label for="inputBill" class="main__inputSection__label">Bill</label>
+         <label for="inputBill" class="main__inputSection__label">Bill <span class="main__inputSection__label__alert"></span></label>
+        
          <input type="number" id="inputBill" class="main__inputSection__inputBill" placeholder="$">
 
          <label for="inputBtn"  class="main__inputSection__label2">Select Tip %</label>
