--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="main__inputSection__wrapper">
             <label for="numberOfPeople" class="main__inputSection__wrapper__label3">Number of People</label> 
-            <span class="main__inputSection__wrapper__alert">Can't be zero</span>
+            <span class="main__inputSection__wrapper__alert"></span>
         </div>
         <input type="number" id="numberOfPeople" class="main__inputSection__wrapper__numberOfPeopleInput" placeholder="">
         </form>
